[tool.poetry]
name = "TrafficToll"
version = "1.2.0"
description = "NetLimiter-like bandwidth limiting and QoS for Linux"
authors = ["cryzed <cryzed@googlemail.com>"]

license='GPLv3'
readme='README.md'
homepage='https://github.com/cryzed/TrafficToll'
repository='https://github.com/cryzed/TrafficToll'
keywords=['traffic', 'traffic control', 'traffic shaping', 'tc', 'netlimiter', 'qos']
include=['LICENSE', 'example.yaml']

[tool.poetry.scripts]
tt = 'traffictoll.__main__:main'

[tool.poetry.dependencies]
python = "^3.7"
psutil = "^5.6.7"
loguru = "^0.4.1"
"ruamel.yamL" = "^0.16.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
